# NetworkAutomation

./: .gitconfig  Pythontest.csv  README.md  names.json  nykey.txt  tojson.py
Asset Register/: AssetRegister.py  test.csv
Collect MAC Address Table/: AssetRegisterNetMikowithoutCommandParameters.py  devices.yaml  install-instance.txt  mac_address_table_inventory.yml  settings.ini  test.csv
NetBox/: APItokens.txt  TestConnection.py  __init__.py  help-ssh-netmiko.py  helper.py  inventory.yml  main.py  script_that_adds_devices.py  script_that_adds_sites.py  sites.csv  sites.json  test.py  tojson.py  yamlreader.py
NetworkAutomation/Asset Register/: AssetRegisterPlay.py  devices.yml
NetworkAutomation/Collect MAC Address Table/: AssetRegisterNetMiko.py  AssetRegisterNetMikowithoutCommandParameters.py  CollectMacAddressTable.py  devices.yml  test.py
NetworkAutomation/TopologyDiagram/Nornir/network-diagram/: pyproject.toml
NetworkAutomation/TopologyDiagram/Nornir/network-diagram/Inventory/: Results.txt  config.yaml  interface.py  interfaces.py  inventory.yml  link.py  main.py  scratch_1.sh  test2.py
NetworkAutomation/TopologyDiagram/Nornir/network-diagram/Inventory/RouterIntel/: defaults.yaml  groups.yaml  hosts.yaml
TestEnvironment/: SitesAddtion.py  sites.json  test.py
Videos/: Hello.txt
Web Asset Register/: main.py
YAMLReader/: inventory.yml  yamlreader.py
configs/: BGP-Fasset.txt  C3725.txt  CiscoCSR1000v16.7.1-1.txt
python-ssh/: asynctest.py  importtestasyncio.py  inventory.yml  python_asynchronous_ssh.py  results.txt
(+9 files in other folders)
